testing/errors/alreadydefined6.a
;ACME 0.97
	a = "somestring"
	a = "someotherstring"	; -> "already defined" (value has changed)
